--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
-		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="/main.css" />
 		<link rel="stylesheet" href="https://use.typekit.net/fde3zjd.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- Global site tag (gtag.js) - Google Analytics -->
